--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,38 @@
+annotated-types==0.7.0
+anyio==4.11.0
 APScheduler==3.11.1
+cachetools==6.2.2
+certifi==2025.11.12
+charset-normalizer==3.4.4
+distro==1.9.0
+exceptiongroup==1.3.0
+google-auth==2.43.0
 google-genai==1.49.0
+greenlet==3.2.4
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
+jiter==0.12.0
+library @ git+https://github.com/kohya-ss/sd-scripts.git@206adb643848ff27894f1e72b6987fa66db99378
 openai==2.7.2
 pillow==11.3.0
 playwright==1.56.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.12.4
+pydantic_core==2.41.5
+pyee==13.0.0
 python-dotenv==1.2.1
 requests==2.32.5
+rsa==4.9.1
+sniffio==1.3.1
 SQLAlchemy==2.0.44
 sqlmodel==0.0.27
+tenacity==9.1.2
+tqdm==4.67.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzlocal==5.3.1
+urllib3==2.5.0
+websockets==15.0.1
