--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 OPENAI_API_KEY=
-INSTAGRAM_USERNAME=
-INSTAGRAM_PASSWORD=
+INSTAGRAM_ACCESS_TOKEN=
+INSTAGRAM_BUSINESS_ACCOUNT_ID=
 GEMINI_API_KEY=
 PEXELS_API_KEY=
 RIN_WEIRD_MODE=
