--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ greenlet==3.2.4
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
+imageio==2.35.1
 idna==3.11
 jiter==0.12.0
 library @ git+https://github.com/kohya-ss/sd-scripts.git@206adb643848ff27894f1e72b6987fa66db99378
@@ -33,6 +34,7 @@ tenacity==9.1.2
 tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+numpy==2.1.3
 tzlocal==5.3.1
 urllib3==2.5.0
 websockets==15.0.1
